--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
   </head>
   <body>
-    <redoc spec-url='dist.json' hide-download-button rightPanel=width: '0%'></redoc>
+    <redoc spec-url='dist.json' hide-download-button ></redoc>
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
   </body>
 </html>
