--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </style>
   </head>
   <body>
-    <redoc spec-url='dist.json' hide-download-button right-panel="width='0%'"></redoc>
+     <redoc spec-url='dist.json' hide-download-button >
+<!--     <redoc spec-url='dist.json' hide-download-button right-panel="width='0%'"></redoc> -->
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
   </body>
 </html>
