--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
      <redoc spec-url='dist.json' hide-download-button >
 <!--     <redoc spec-url='dist.json' hide-download-button right-panel="width='0%'"></redoc> -->
     <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
+    <a href = "swagger.html">Text Here</a>
   </body>
 </html>
