--- a/temp.html
+++ b/temp.html
@@ -20,7 +20,7 @@
     <body>
   <div id="redoc-container"></div>
   <script src="https://cdn.jsdelivr.net/npm/redoc@2.0.0-rc.55/bundles/redoc.standalone.min.js"> </script>
-  <script src="dist/swagger-ui-standalone-preset.js" charset="UTF-8"></script>
+  <script src="dist/try.js" charset="UTF-8"></script>
   <script>
     
     initTry({
